<resources>
    <string name="app_name">Books</string>
    <string name="title_activity_book_list">Book List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error_data_message">Error Loading Data from Google Books API</string>
    <string name="book_open_icon">Book Icon</string>
    <string name="book_title_text">Book Title</string>
    <string name="authors_text">Authors</string>
    <string name="publisher_text">Publisher</string>
    <string name="date_text">Date</string>
    <string name="search_menu_text">Search</string>
</resources>
