<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="10dp">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_view_padding"
        android:weightSum="100">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:contentDescription="@string/book_open_icon"
            app:srcCompat="@drawable/ic_library_books_black_24dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="85"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/title_text_size"
                android:text="@string/book_title_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAuthors"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/authors_text_size"
                android:text="@string/authors_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="70"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPublisher"
                    android:text="@string/publisher_text"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPublishedDate"
                    android:textAlignment="textEnd"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/published_date_padding"
                    android:text="@string/date_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>